--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew build org.gradle.jvmargs=-Xmx1536m --illegal-access=permit
